| Bug #15843 | Added mmap support in myisam creates compile problem on AIX 5.2 | ||
|---|---|---|---|
| Submitted: | 19 Dec 2005 1:08 | Modified: | 6 Jan 2006 5:12 |
| Reporter: | Kent Boortz | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S1 (Critical) |
| Version: | 5.1.4-pre | OS: | IBM AIX (AIX 5.2) |
| Assigned to: | Vadim Tkachenko | CPU Architecture: | Any |
[19 Dec 2005 1:08]
Kent Boortz
[19 Dec 2005 7:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/237
[19 Dec 2005 8:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/239
[19 Dec 2005 12:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/249
[19 Dec 2005 13:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/251
[6 Jan 2006 5:12]
Paul DuBois
No changelog entry needed.
