Bug fix for bug #15843 "Added mmap support in myisam creates compile problem on AIX 5.2"

Added dummy definition of MAP_NORESERVE for systems which doesn't provide it,
removed duplicates

my_sys.h:
  added definition for MAP_NORESERVE
  (for Irix and AIX systems)
sql_map.cc:
  removed definition of MAP_NORESERVE
mi_packrec.c:
  removed definition of MAP_NORESERVE and MMAP_PRIVATE